[package]
name = "bevy_window_management"
version = "0.1.0"
edition = "2021"
authors = ["Adam Grabski"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
taskbar = ["dep:winsafe"]
default = ["taskbar"]

[dependencies]
bevy = "0.11.0"
winsafe = { version = "0.0.19", optional = true, features = ["shell"] }
winit = "0.28.7"
