[package]
name = "bevy_window_management"
version = "0.1.2"
edition = "2021"
authors = ["Adam Grabski"]
description = "A library for managing window icon and taskbar progress indicator in Bevy"
license = "MIT"
readme = "../Readme.md"
repository = "https://github.com/Agrabski/bevy_window_management"
[lib]


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
taskbar = ["dep:winsafe"]
default = ["taskbar"]

[dependencies]
bevy = "0.11.3"
winit = "0.28.7"

[target.'cfg(windows)'.dependencies]
winsafe = { version = "0.0.19", optional = true, features = ["shell"] }
